Revise index.html with new content and structure
Updated HTML structure and content with new elements, including headings, lists, images, a table, a form, and a link.

--- a/index.html
+++ b/index.html
@@ -3,12 +3,59 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pertemuan 1</title>
+    <title>pem web</title>
 </head>
 <body>
-    <p>Assalamualaikum</p>
-    <h5>Bab 1</h5>
-    <br>
-    <h2>HTML Dasar</h2>
+    <h1>p</h1>
+    <h3>p</h3>
+
+    <p>apa ya <br> apa kek</p>
+
+    <ol>
+        <li>1+1 = ?</li>
+    </ol>
+
+    <ul>
+        <li> A. 1</li>
+        <li> B. 2</li>
+        <li> C. 3</li>
+    </ul>
+
+    <img src="ilham.jpg" alt="absen ilham" width="300">
+    <p>Absen Ilham</p>
+
+    <h4>Buat tabel</h4>
+<table border="10">
+    <tr>
+        <th>Nama</th>
+        <th>npm</th>
+        <th>kelas</th>
+    </tr>
+    <tr>
+        <td>Dhemas Ravinagata</td>
+        <td>2457052007</td>
+        <td>SI</td>
+    </tr>
+    <tr>
+        <td rowspan="3">Dhemas Ravinagata</td>
+        <td colspan="2">2457052007</td>
+    </tr>
+    <tr>
+        <td>3</td>
+    </tr>
+</table> 
+
+    <h3>BUAT INPUTAN</h3>
+    <form action="" method="post">
+        <label for="E-mail">E-mail:</label>
+        <input type="text" id="E-mail" name="email"><br><br>
+
+        <label for="PW ">Masukin PW:</label>
+        <input type="password" id="PW" name="password"><br><br>
+        <input type="date" placeholder="nama lengkap">
+        <input type="submit" value="Submit">
+
+    <h3>BUAT LINK</h3>
+    <a href="https://www.instagram.com/p/DUyOJCvjquT/?igsh=MXhvdWE0dnNlaTh4bA==" target="_blank">yg mencet org gtg</a>
 </body>
 </html>
